--- a/css/style.css
+++ b/css/style.css
@@ -27,14 +27,131 @@ a {
 
 /* -------------------------------- 
 
+search
+
+-------------------------------- */
+
+@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700);
+@import url(https://raw.github.com/FortAwesome/Font-Awesome/master/docs/assets/css/font-awesome.min.css);
+#wrap {
+    width: 100%;
+  display: inline-block;
+  position: relative;
+  height: 10%;
+  padding: 0;
+  position: relative;
+    margin: 0 auto;
+}
+
+input[type="text"] {
+  height: 60px;
+  font-size: 15px;
+  display: inline-block;
+  font-family: "Lato";
+  font-weight: 100;
+  border: none;
+  outline: none;
+  color: rgb(155, 148, 97);
+  padding: 3px;
+  padding-right: 60px;
+  width: 0px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: none;
+  z-index: 3;
+  transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
+  cursor: pointer;
+     
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  overflow: hidden;
+  border: none;
+  font: normal 16px/1 "Times New Roman", Times, serif;
+  text-align: center;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+    margin: 0 auto;
+}
+
+input[type="text"]:focus:hover {
+      -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  overflow: hidden;
+  border: none;
+  font: normal 16px/1 "Times New Roman", Times, serif;
+  color: rgba(255,255,255,1);
+  text-align: center;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  height: 60px;
+}
+
+input[type="text"]:focus {
+  height: 60px;
+  width: 85%;
+  z-index: 1;
+  cursor: text;
+      -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+}
+input[type="submit"] {
+  height: 60px;
+  width: 63px;
+  display: inline-block;
+  color:red;
+  float: right;
+  background: url(http://android-ui-utils.googlecode.com/hg-history/4eaad0f953d8a224eda3ea2e882943cb7171d154/asset-studio/src/res/clipart/icons/search.svg) center center no-repeat;
+    background-size: 100%;
+  text-indent: -10000px;
+  border: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  cursor: pointer;
+  opacity: 0.5;
+  cursor: pointer;
+  transition: opacity .4s ease;
+    margin: 0 auto;
+}
+
+input[type="submit"]:hover {
+  opacity: 0.5;
+  box-shadow: inset 0 2px 0 #f05451;
+}
+
+/* -------------------------------- 
+
 Main components 
 
 -------------------------------- */
+
+.scribe{
+  position: fixed;
+  bottom: 1%;
+  right: 1%;
+  width: 44px;
+  height: 44px;
+  background: white;
+  border-radius: 50%;
+  box-shadow: 0 0 10px rgba(232, 74, 100, 0.4);
+  /* image replacement */
+  overflow: hidden;
+  text-indent: 100%;
+  white-space: nowrap;
+  z-index: 2;
+}
+
 header {
-  position: relative;
-  height: 10%;
-  line-height: 100px;
-  text-align: center;
+  position: fixed;
+  text-align: left;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -44,8 +161,6 @@ header h1 {
 }
 @media only screen and (min-width: 768px) {
   header {
-    height: 10%
-    line-height: 100px;
   }
   header h1 {
     font-size: 26px;
@@ -58,6 +173,7 @@ header h1 {
   width: 90%;
   max-width: 960px;
   margin: 2em auto;
+    
 }
 .cd-tabs:after {
   content: "";
@@ -97,6 +213,7 @@ header h1 {
   -webkit-overflow-scrolling: touch;
   background: #f8f7ee;
   box-shadow: inset 0 -2px 3px rgba(203, 196, 130, 0.06);
+    
 }
 @media only screen and (min-width: 768px) {
   .cd-tabs::after {
@@ -104,8 +221,8 @@ header h1 {
   }
   .cd-tabs nav {
     position: absolute;
-    top: 0;
-    left: 0;
+    bottom: 0;
+    margin: 0 auto;
     height: 100%;
     box-shadow: inset -2px 0 3px rgba(203, 196, 130, 0.06);
     z-index: 1;
@@ -123,14 +240,16 @@ header h1 {
 .cd-tabs-navigation {
   width: 100%;
     position: fixed;
-    bottom: 0;
+    top: 0;
     margin: 0 auto;
     align-content: center;
+    
 }
 .cd-tabs-navigation:after {
   content: "";
   display: table;
   clear: both;
+    
 }
 .cd-tabs-navigation li {
   float: left;
@@ -150,6 +269,7 @@ header h1 {
   font-weight: 700;
   color: grey;
   padding-top: 34px;
+    
 }
 .no-touch .cd-tabs-navigation a:hover {
   color: #29324e;
@@ -259,8 +379,15 @@ header h1 {
 .cd-tabs-content li {
   display: none;
   padding: 1.4em;
+    overflow: hidden;
 }
-.cd-tabs-content li.selected {
+.cd-tabs-content li [class="inbox"] {
+  display: block;
+  padding: 1.4em;
+}
+
+
+.cd-tabs-content li.selected, .cd-tabs-content li .inbox {
   display: block;
   -webkit-animation: cd-fade-in 0.5s;
   -moz-animation: cd-fade-in 0.5s;
