--- a/css/admin.css
+++ b/css/admin.css
@@ -19,7 +19,7 @@
 	left:38px;
 	padding:0;
 	position:absolute;
-	overflow:hidden;
+	/*overflow:hidden;*/
 
 	/* Text properties */
 	font-family:'Myriad Pro',Arial, Helvetica, sans-serif;
